Fixed Nav Menu showing behind carasoul issue

--- a/src/app/assets/common/components/nav-bar/nav-bar.component.css
+++ b/src/app/assets/common/components/nav-bar/nav-bar.component.css
@@ -65,6 +65,7 @@
     width: 100%;
     top: 55px;
     height: 150px !important;
+    z-index: 100;
   }
   button.nav-buttons {
     display: block;
