--- a/src/app/assets/pages/home/home.component.css
+++ b/src/app/assets/pages/home/home.component.css
@@ -2,6 +2,7 @@
     height: 100%;
     .carousel-container {
   position: relative;
+  z-index: 1;
   width: 100%;
   margin: auto;
 }
